<resources>
    <string name="app_name">mealPlanner</string>
    <string name="email_label">Email</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="googleBtn">Sign Up with Google</string>
    <string name="signup">Sign up</string>
    <string name="or">OR</string>
    <string name="fname">First Name</string>
    <string name="lname">Last Name</string>
    <string name="phone">Phone</string>
    <string name="pass">Password</string>
    <string name="conPass">Confirm Password</string>
    <string name="guist">Continue as a Guist</string>
    <string name="signin">Sign In</string>
    <string name="remember_me">Remember me</string>
    <string name="donot_have_an_account">Do not have an account? </string>
    <string name="do_you_have">Do you have account?</string>
    <string name="fav_text">Favourite</string>
    <string name="home_text">Home</string>
    <string name="profile_text">Profile</string>
    <string name="setting">Setting</string>
    <string name="help">Help</string>
    <string name="navigation_drawer_open">Opened</string>
    <string name="navigation_drawer_close">Closed</string>
    <string name="username">Username</string>
    <string name="ahmed">Ahmed Elmorshedy</string>
    <string name="choose">Choose \nYour Favourite Food</string>
    <string name="all">All</string>
    <string name="category">Category</string>
    <string name="country">Country</string>
    <string name="ingradiant">Ingradiant</string>
    <string name="meal_ofDay">The Meal of Day</string>
    <string name="read_more">Read more</string>
    <string name="meal_name">Meal Name :</string>
    <string name="area">Area :</string>
    <string name="instruction">Instructions :</string>
    <string name="ingradiantt">Ingradiants :</string>
    <string name="categoryy">Category :</string>
    <string name="default_web_client_id">Default Web Client Id</string>
    <string name="logout">Log out</string>
    <string name="search">Search by Name</string>
    <string name="daily">Daily Meal</string>
    <string name="calendar">Calendar</string>
    <string name="ssearch">Search</string>
    <string name="poor_conn">Poor Connection...</string>
    <string name="check_internet">"Check your Internet and try again "</string>
    <string name="welcome">Welcome</string>
    <string name="watch">Watch Video</string>
    <string name="notification">Notification</string>
    <string name="your_plan">Your Plans</string>

</resources>