<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

        <group android:checkableBehavior="single">

                <item
                    android:id="@+id/notification"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:actionLayout="@layout/custom_notification_item"
                    android:title="@string/notification" />
                <item
                    android:id="@+id/setting"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:icon="@drawable/setting_icon"
                    android:title="@string/setting" />
                <item
                    android:id="@+id/help"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:icon="@drawable/help_icon"
                    android:title="@string/help" />
                <item
                    android:id="@+id/logout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:icon="@drawable/logout"
                    android:title="@string/logout" />
        </group>

</menu>