<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_vertical"
    android:background="@color/white_gray"
    tools:context="signup.view.SignUpActivity">


    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/rounded_background"
        app:cardCornerRadius="30dp"
        app:cardElevation="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.5">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="16dp"
            android:weightSum="2">

            <TextView
                android:id="@+id/signupTxID"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:fontFamily="sans-serif"
                android:text="@string/signup"
                android:textColor="@color/dark_color"
                android:textSize="34sp"
                android:textStyle="bold" />



                <com.google.android.material.textfield.TextInputLayout

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:hint="@string/username"
                    app:boxStrokeColor="@color/dark_color"
                    app:boxStrokeWidth="1dp"
                    app:errorIconTint="@color/dark_color">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/firstNameTxId"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawableStart="@drawable/name"
                        android:drawablePadding="5dp"
                        android:textSize="14sp" />

                </com.google.android.material.textfield.TextInputLayout>





            <com.google.android.material.textfield.TextInputLayout

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:hint="@string/email_label"
                app:boxStrokeColor="@color/dark_color"
                app:boxStrokeWidth="1dp"
                app:errorIconTint="@color/dark_color">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:id="@+id/emailTxId"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/email"
                    android:drawablePadding="5dp"
                    android:textSize="14sp" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:layout_weight="1"
                android:hint="@string/phone"
                app:boxStrokeColor="@color/dark_color"
                app:errorIconTint="@color/dark_color">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:id="@+id/phoneTxId"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/phone"
                    android:drawablePadding="5dp"
                    android:inputType="number"
                    android:textSize="14sp" />

            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:layout_weight="1"
                android:hint="@string/pass"
                app:boxStrokeColor="@color/dark_color"
                app:endIconMode="password_toggle"
                app:errorIconTint="@color/dark_color">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:id="@+id/passsTxId"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:textSize="14sp" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:layout_weight="1"
                android:hint="@string/conPass"
                app:boxStrokeColor="@color/dark_color"
                app:endIconMode="password_toggle"
                app:errorIconTint="@color/dark_color">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:id="@+id/conPasssTxId"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:textSize="14sp" />

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/signInBtnId"
                android:layout_width="200dp"
                android:layout_height="50dp"
                android:layout_marginTop="8dp"
                android:layout_weight="1"
                android:backgroundTint="@color/dark_color"
                android:text="@string/signup" />

            <Button
                android:id="@+id/guistBtnId"
                android:layout_width="200dp"
                android:layout_height="50dp"
                android:layout_marginTop="8dp"
                android:layout_weight="1"

                android:backgroundTint="@color/white"
                android:text="@string/guist"
                android:textColor="@color/dark_color"
                app:rippleColor="@color/red"
                app:strokeColor="@color/dark_color"
                app:strokeWidth="1dp" />

            <View
                android:id="@+id/divider2"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="8dp"
                android:background="?android:attr/listDivider" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:gravity="center"
                android:text="@string/or" />

            <ImageButton
                android:id="@+id/googleBtnID"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:background="@drawable/btn_shape"
                android:src="@drawable/google_icon" />

            <LinearLayout
                android:id="@+id/singInLinearId"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginTop="16dp"
                android:clickable="true"
                android:onClick="goToSignUp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="5dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/do_you_have" />

                <TextView
                    android:id="@+id/singUpTxID"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:clickable="true"
                    android:text="@string/signin"
                    android:textColor="@color/dark_color" />
            </LinearLayout>


        </LinearLayout>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>