<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white_gray"
    tools:context="login.view.SignInActivity">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"

        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/rounded_background"
        app:cardCornerRadius="30dp"
        app:cardElevation="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="16dp"
            android:weightSum="2">

            <TextView
                android:id="@+id/signupTxID"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:fontFamily="sans-serif"
                android:text="@string/signin"
                android:textColor="@color/dark_color"
                android:textSize="34sp"
                android:textStyle="bold" />

            <com.google.android.material.textfield.TextInputLayout

                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="4dp"
                android:hint="@string/email_label"
                app:boxStrokeColor="@color/dark_color"
                app:boxStrokeWidth="1dp"
                app:errorIconTint="@color/dark_color">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/emailTxId"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/email"
                    android:drawablePadding="5dp"
                    android:inputType="text|textEmailAddress"
                    android:textSize="14sp" />

            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:layout_weight="1"
                android:hint="@string/pass"
                app:boxStrokeColor="@color/red"
                app:endIconMode="password_toggle"
                app:errorIconTint="@color/red">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:id="@+id/passsTxId"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:textSize="14sp" />

            </com.google.android.material.textfield.TextInputLayout>


            <CheckBox
                android:id="@+id/checkBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:backgroundTint="@color/dark_color"
                android:text="@string/remember_me"
                android:textColor="@color/dark_color"
                android:textColorHighlight="@color/dark_color"
                android:textColorLink="@color/dark_color" />

            <Button
                android:id="@+id/signInBtnId"
                android:layout_width="200dp"
                android:layout_height="50dp"
                android:layout_marginTop="16dp"
                android:layout_weight="1"
                android:backgroundTint="@color/dark_color"
                android:text="@string/signin" />


            <View
                android:id="@+id/divider2"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="8dp"
                android:background="?android:attr/listDivider" />

            <LinearLayout
                android:id="@+id/singInLinearId"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginTop="16dp"
                android:clickable="true"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="5dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/donot_have_an_account" />

                <TextView
                    android:id="@+id/singUpTxID"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/signup"
                    android:textColor="@color/dark_color" />
            </LinearLayout>


        </LinearLayout>
    </androidx.cardview.widget.CardView>

</FrameLayout>