<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white_gray"
    android:fitsSystemWindows="true"
    tools:context="itemDetails.itemView.ItemDetails">


    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:fitsSystemWindows="true"

        android:theme="@style/ThemeOverlay.AppCompat.DayNight">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            app:contentScrim="@color/dark_color"
            app:expandedTitleMarginEnd="26dp"
            app:expandedTitleMarginStart="10dp"
            app:layout_scrollFlags="scroll|enterAlwaysCollapsed|exitUntilCollapsed|snap">

            <ImageView
                android:id="@+id/itemImageID"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/white_gray"
                android:fitsSystemWindows="true"
                android:scaleType="centerCrop"
                app:layout_collapseMode="parallax" />

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/myToolBarID"
                android:layout_width="match_parent"
                android:layout_height="?actionBarSize"
                android:title=""
                app:layout_collapseMode="pin"
                app:popupTheme="@style/ThemeOverlay.AppCompat.DayNight" />

        </com.google.android.material.appbar.CollapsingToolbarLayout>


    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipToPadding="true"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:gravity="start"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:gravity="start"
                android:text="@string/meal_name"
                android:textColor="@color/dark_color"
                android:textSize="14sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/mealNameViewerID"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:gravity="start"
                android:text="@string/categoryy"
                android:textColor="@color/dark_color"
                android:textSize="14sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/categoryViewerID"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:gravity="start"
                android:text="@string/area"
                android:textColor="@color/dark_color"
                android:textSize="14sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/areaViewerID"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:gravity="start"
                android:text="@string/instruction"
                android:textColor="@color/dark_color"
                android:textSize="14sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/instructionViewerID"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:gravity="start"
                android:text="@string/ingradiantt"
                android:textColor="@color/dark_color"
                android:textSize="14sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/ingradiantsViewerID"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:textSize="14sp" />

            <HorizontalScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/imageIngra1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="4dp"
                        android:layout_weight="1"
                         />

                    <ImageView
                        android:id="@+id/imageIngra2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="4dp"
                        android:layout_weight="1"
                         />

                    <ImageView
                        android:id="@+id/imageIngra3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="4dp"
                        android:layout_weight="1"
                         />

                    <ImageView
                        android:id="@+id/imageIngra4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="4dp"
                        android:layout_weight="1"
                        />

                    <ImageView
                        android:id="@+id/imageIngra5"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="4dp"
                        android:layout_weight="1"
                        />
                </LinearLayout>
            </HorizontalScrollView>

            <TextView
                android:id="@+id/textView7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginBottom="16dp"
                android:text="@string/watch"
                android:textColor="@color/dark_color"
                android:textSize="16sp"
                android:textStyle="bold" />


            <com.pierfrancescosoffritti.androidyoutubeplayer.core.player.views.YouTubePlayerView
                android:id="@+id/video"
                android:layout_width="match_parent"
                android:layout_height="300dp"

                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="16dp"
                app:autoPlay="false" />
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>


    <com.getbase.floatingactionbutton.FloatingActionsMenu
        android:id="@+id/fab_menu"
        android:layout_width="84dp"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        app:fab_addButtonColorNormal="@color/dark_color"
        app:fab_expandDirection="up"
        app:fab_labelsPosition="left">

        <com.getbase.floatingactionbutton.FloatingActionButton
            android:id="@+id/fav_fabID"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:fab_colorNormal="#FFFDAEAE"
            app:fab_colorPressed="@color/white"
            app:fab_icon="@drawable/heart"
            app:fab_title="Item 1"
            app:rippleColor="@color/white_red" />

        <com.getbase.floatingactionbutton.FloatingActionButton
            android:id="@+id/calender_fabID"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:fab_colorNormal="@color/white_red"
            app:fab_colorPressed="@color/white"
            app:fab_icon="@drawable/calender_agenda_icon"
            app:fab_title="Item 2" />
    </com.getbase.floatingactionbutton.FloatingActionsMenu>


</androidx.coordinatorlayout.widget.CoordinatorLayout>